# python_design_pattern

./: builder.py  decorator.py  factory.py  mvc.py  prototype.py  proxy_lazy.py  proxy_save.py  pyproject.toml
action/: chain_of_responsibility.py  command.py  interpreter.py  observer.py  state.py  strategy.py  template.py
create/: abstract_factory.py  flyweight.py
struct/: adapter.py  facade.py  factory.py
