[tool.poetry]
name = "python_design_pattern"
version = "0.1.0"
description = ""
authors = ["wumin <wumin@linezonedata.com>"]

[tool.poetry.dependencies]
python = "^3.8"
state_machine = "^0.2.10"
pyparsing = "^3.0.6"
cowpy = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
